kubernetes/test/app-test-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-test
  template:
    metadata:
      labels:
        app: flask-test
    spec:
      containers:
        - name: flask
          image: krithikv/flask-worker-app:test
          imagePullPolicy: IfNotPresent
          command: ["python", "src/flask_api.py"]
          ports:
            - containerPort: 5000
          env:
            - name: REDIS_HOST
              value: "redis-test"
            - name: PYTHONUNBUFFERED
              value: "1"
