kubernetes/test/app-test-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-test
  template:
    metadata:
      labels:
        app: worker-test
    spec:
      containers:
        - name: worker
          image: krithikv/flask-worker-app:test
          imagePullPolicy: IfNotPresent
          command: ["python", "src/worker.py"]
          env:
            - name: REDIS_HOST
              value: "redis-test"
            - name: PYTHONUNBUFFERED
              value: "1"
