kubernetes/test/app-test-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-test
spec:
  selector:
    app: flask-test
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
