kubernetes/test/app-test-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport-test
spec:
  type: NodePort
  selector:
    app: flask-test
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 31080
