kubernetes/test/app-test-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-test
spec:
  selector:
    app: redis-test
  ports:
    - protocol: TCP
      port: 6379
